# 20242R0136COSE48001

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
app/: .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.css  App.tsx  Setting.tsx  Settings.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/config/: config.yaml
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/component/: HomeButton.tsx
app/src/explorer/: DeviceExplorer.css  DeviceExplorer.tsx  DeviceList.tsx  Explorer.css  LocalExplorer.tsx  RemoteExplorer.tsx  Types.tsx
app/src/explorer/components/: NavigationButtons.tsx
app/src/files/: Dest.tsx  MyDest.tsx  Receive.tsx  Send.css  Send.tsx
client/: Cargo.toml
client/config/: client.yaml
client/src/: client.rs  config_loader.rs  file_server.rs  lib.rs  main.rs
client/src/client/: handler.rs
client/src/event/: command.rs  mod.rs
client/src/net/: ku_protocol.rs  mod.rs  p2p.rs  transport.rs
client/src/net/server/: listener.rs  mod.rs
client/tests/: p2p_unit_test.rs
common/: Cargo.toml
common/src/: fs.rs  lib.rs  p2p.rs  peer.rs  server.rs
common/src/client/: mod.rs
common/src/event/: client.rs  mod.rs  server.rs
common/src/event/client/: command.rs  mod.rs
common/src/event/server/: mod.rs
common/src/message/: client.rs  mod.rs  server.rs
common/src/tcp/: listener.rs  mod.rs  transmitter.rs
common/src/tcp/message/: client.rs  file.rs  mod.rs  server.rs
common/src/util/: health.rs  mod.rs  pending.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  p2p.rs
server/src/client/: group.rs  handler.rs  mod.rs
server/src/event/: meta.rs  mod.rs
