[workspace]
members = ["server", "client", "common"]

[workspace.package]
name = "kudrive"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.83"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
tokio = { version = "1.40.0", features = ["full"] }
bytes = "1.0"