[workspace]
members = [
    "server", 
    "client", 
    "common",
    "app/src-tauri"
]

[workspace.package]
name = "kudrive"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.83"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
tokio = { version = "1.40.0", features = ["full"] }
bytes = "1.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
libp2p = { version="0.54.1", features = [
    "tokio", 
    "tcp", 
    "cbor", 
    "dcutr", 
    "ed25519", 
    "request-response",
    "ping",
    "relay",
    "noise",
    "identify",
    "yamux"
    ] }
tracing = "0.1.40"
dotenv = "0.15.0"
clap = { version = "4.5.20", features = ["derive", "env"] }
