[package]
name = "kudrive-client"
version = "0.1.0"
edition = "2021"
default-run = "kudrive-client"

[dependencies]
kudrive-common = { path = "../common" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
lazy_static = "1.5.0"
uuid.workspace = true
serde_yaml = "0.9.34"
