[package]
name = "kudrive-client"
version = "0.1.0"
edition = "2021"
default-run = "kudrive-client"

[dependencies]
kudrive-common = { path = "../common" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
walkdir = "2.5.0"
notify = "7.0.0"
regex = "1.11.1"
lazy_static = "1.5.0"
uuid.workspace = true
serde_yaml = "0.9.34"
libp2p = { workspace = true }
clap = { workspace = true }
futures = "0.3.31"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing.workspace = true
futures-timer = "3.0.3"
bincode = "1.3.3"
dotenv = { workspace = true }
rand = "0.8.5"
dirs = "5.0.1"
